Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99949

Cannot do unthrottled Present with D3D

XMLWordPrintable

    • Windows
    • 6dd09664b2 (qt/qtbase/dev) 6dd09664b2 (qt/tqtc-qtbase/dev) 6d90ab18cd (qt/qtbase/6.3) 6d90ab18cd (qt/tqtc-qtbase/6.3)

      Running a Qt Quick (or other QRhi-based) application with QRhiSwapChain::NoVSync does not seem to have the desired effect on modern Windows 10 systems: while the swapInterval passed in to Present() is indeed changing to 0, the presentation does get throttled still (it is in fact visible that we get unthrottled presentation for some frames but then throttling kicks in)

      (with Qt Quick setting the legacy QSurfaceFormat::swapInterval to 0 on the window triggers this automatically)

      To remedy this, try using DXGI_SWAP_CHAIN_FLAG_ALLOW_TEARING/DXGI_PRESENT_ALLOW_TEARING from DXGI 1.5 when possible.

      Also reported at https://bugreports.qt.io/browse/QTBUG-29073?focusedCommentId=558616&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-558616

        For Gerrit Dashboard: QTBUG-99949
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes